test/src/e2e_vm_tests/test_programs/should_fail/language/intrinsics/transmute/stdout.snap
---
source: test/src/snapshot/mod.rs
---
> forc build --path test/src/e2e_vm_tests/test_programs/should_fail/language/intrinsics/transmute
exit status: 1
output:
    Building test/src/e2e_vm_tests/test_programs/should_fail/language/intrinsics/transmute
   Compiling library std (test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core)
DIFF------------------------------
.program:
   Compiling script transmute (test/src/e2e_vm_tests/test_programs/should_fail/language/intrinsics/transmute)
error
 --> test/src/e2e_vm_tests/test_programs/should_fail/language/intrinsics/transmute/src/main.sw:5:13
  |
3 | fn main() {
4 |     // Missing type arguments
5 |     let _ = __transmute(1u64);
  |             ^^^^^^^^^^^^^^^^^ Call to "transmute" expects 2 type arguments
6 |     let _ = __transmute::<u64>(1u64);
7 | 
  |
____

error
 --> test/src/e2e_vm_tests/test_programs/should_fail/language/intrinsics/transmute/src/main.sw:6:13
  |
4 |     // Missing type arguments
5 |     let _ = __transmute(1u64);
6 |     let _ = __transmute::<u64>(1u64);
  |             ^^^^^^^^^^^^^^^^^^^^^^^^ Call to "transmute" expects 2 type arguments
7 | 
8 |      // Wrong source type
  |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_fail/language/intrinsics/transmute/src/main.sw:9:36
   |
 7 | 
 8 |      // Wrong source type
 9 |     let _ = __transmute::<u64, u8>(1u32);
   |                                    ^^^^ Mismatched types.
expected: u64
found:    u32.

10 | 
11 |     // Different sizes
   |
____

  Aborting due to 3 errors.
error: Failed to compile transmute
